# Socket-Server

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: s3_uploader.py  socket_server.py  test.py
